--- a/LapTracker/app/src/main/AndroidManifest.xml
+++ b/LapTracker/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,6 +18,76 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LapTracker"
         tools:targetApi="31">
+        <activity
+            android:name=".Feature14"
+            android:exported="false"
+            android:label="@string/title_activity_feature14"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature13"
+            android:exported="false"
+            android:label="@string/title_activity_feature13"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature12"
+            android:exported="false"
+            android:label="@string/title_activity_feature12"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature11"
+            android:exported="false"
+            android:label="@string/title_activity_feature11"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature10"
+            android:exported="false"
+            android:label="@string/title_activity_feature10"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature9"
+            android:exported="false"
+            android:label="@string/title_activity_feature9"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature8"
+            android:exported="false"
+            android:label="@string/title_activity_feature8"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature7"
+            android:exported="false"
+            android:label="@string/title_activity_feature7"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature6"
+            android:exported="false"
+            android:label="@string/title_activity_feature6"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature5"
+            android:exported="false"
+            android:label="@string/title_activity_feature5"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature4"
+            android:exported="false"
+            android:label="@string/title_activity_feature4"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature3"
+            android:exported="false"
+            android:label="@string/title_activity_feature3"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature2"
+            android:exported="false"
+            android:label="@string/title_activity_feature2"
+            android:theme="@style/Theme.LapTracker" />
+        <activity
+            android:name=".Feature1"
+            android:exported="false"
+            android:label="@string/title_activity_feature1"
+            android:theme="@style/Theme.LapTracker" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
