--- a/LapTracker/app/src/main/AndroidManifest.xml
+++ b/LapTracker/app/src/main/AndroidManifest.xml
@@ -90,7 +90,7 @@
             android:label="Feature1"
             android:theme="@style/Theme.LapTracker" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.main.MainActivity"
             android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/Theme.LapTracker">
